Fixed search result word wrap

--- a/_sass/search.scss
+++ b/_sass/search.scss
@@ -166,6 +166,11 @@
     height: $sp-4;
     margin-right: $sp-2;
     fill: $link-color;
+    flex-shrink: 0;
+  }
+
+  .search-result-doc-title {
+    overflow: auto;
   }
 }
 
